@@ -19,7 +19,7 @@ referenced.   I think this would be an easier way to manage xpms.
 *** @todo: grep for @todo and finish off those tasks, scattered throughout the source.
 
 
-*** use BOARD_ITEM::MenuText() and MenuIcon() in the onrightclick.cpp
+*** use BOARD_ITEM::MenuIcon() in the onrightclick.cpp
 
 
 *** make the ADD_MENUITEM macros in include/macros.h be static inline functions instead
